@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.2 2018/07/28 14:40:42 brook Exp $
+# $NetBSD: Makefile,v 1.3 2019/07/31 18:01:32 brook Exp $
 
-CATEGORIES=	devel
+CATEGORIES=	devel R
 
 MAINTAINER=	minskim@NetBSD.org
-COMMENT=	Boost C++ Header Files
+COMMENT=	Boost C++ header files
 LICENSE=	boost-license
 
 R_PKGNAME=	BH
-R_PKGVER=	1.66.0-1
+R_PKGVER=	1.69.0-1
 
 USE_LANGUAGES=	# none
 
