@@ -1,11 +1,11 @@
-# $NetBSD: buildlink3.mk,v 1.1 2018/04/11 15:23:52 minskim Exp $
+# $NetBSD: buildlink3.mk,v 1.2 2019/07/31 18:01:32 brook Exp $
 
 BUILDLINK_TREE+=	R-BH
 
 .if !defined(R_BH_BUILDLINK3_MK)
 R_BH_BUILDLINK3_MK:=
 
-BUILDLINK_API_DEPENDS.R-BH+=	R-BH>=1.66.0.1
+BUILDLINK_API_DEPENDS.R-BH+=	R-BH>=1.69.0.1
 BUILDLINK_DEPMETHOD.R-BH?=	build
 BUILDLINK_PKGSRCDIR.R-BH?=	../../devel/R-BH
 .endif	# R_BH_BUILDLINK3_MK
