@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3153 2019/07/31 16:33:56 leot Exp $
+$NetBSD: CHANGES-2019,v 1.3154 2019/07/31 18:01:32 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5110,3 +5110,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated lang/R-codetools to 0.2.16 [brook 2019-07-31]
 	Updated mail/R-mime to 0.7 [brook 2019-07-31]
 	Updated www/vimb to 3.5.0 [leot 2019-07-31]
+	Updated devel/R-BH to 1.69.0.1 [brook 2019-07-31]
